devops-k8s-master/yaml/alpine-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: apline-dep
  name: apline-dep
spec:
  replicas: 10
  selector:
    matchLabels:
      app: apline-dep
  strategy: 
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 50%
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: apline-dep
    spec:
      containers:
      - image: alpine:3.4
        name: alpine
        resources: {}
status: {}
