devops-k8s-master/yaml/busybox-cmd-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox-cmd-pod
spec:
  containers:
  - image: busybox
    name: busybox-cmd-pod
    command: ['sh', '-c', 'echo "Hello, Kubernetes!" && sleep 3600']
