devops-k8s-master/yaml/gce-mongodb-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mongodb
spec:
  containers:
  - image: mongo
    name: mongodb
    volumeMounts:
    - mountPath: /data/db
      name: mongodb
  volumes:
  - name: mongodb
    # This GCE PD must already exist.
    gcePersistentDisk:
      pdName: mongodb
      fsType: ext4
