devops-k8s-master/yaml/http-spring-nodename.yaml
apiVersion: v1
kind: Pod
metadata:
  name: http-spring
spec:
  containers:
  - image: jaesay/http-spring
    name: http-spring
  nodeName: multinode-demo-m02
