devops-k8s-master/yaml/label-selector-example.yaml
apiVersion: v1
kind: Pod
metadata:
  name: label-selector-example
  labels:
    app: nginx
spec:
  containers:
  - name: nginx
    image: nginx:1.14.2
    ports:
    - containerPort: 80
