devops-k8s-master/yaml/limitrange-nginx-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: limitrange-nginx
  namespace: limitrange-demo
spec:
  containers:
  - name: constraints-mem-demo-ctr
    image: nginx
    resources:
      limits:
        memory: "800Mi"
      requests:
        memory: "600Mi"
