devops-k8s-master/yaml/nginx-deploy-hpa.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deploy-hpa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-deploy-hpa
  template:
    metadata:
      labels:
        app: nginx-deploy-hpa
    spec:
      containers:
      - image: nginx
        name: nginx
        ports:
        - containerPort: 80
      resources:
        limits:
          cpu: 500m
        requests:
          cpu: 200m
