devops-k8s-master/yaml/nginx-redis-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-redis-pod
spec:
  containers:
  - image: nginx
    name: nginx
    ports:
    - containerPort: 80
  - image: redis
    name: redis
