devops-k8s-master/yaml/nx-pod-sa1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nx
spec:
  serviceAccountName: sa1
  containers:
  - image: nginx
    name: nx
