devops-k8s-master/yaml/secret-mysql.yaml
apiVersion: v1
kind: Pod
metadata:
  name: secret-mysql
spec:
  containers:
  - image: mysql:5.6
    name: secret-mysql
    ports:
    - containerPort: 3306
