devops-k8s-master/yaml/tomcat-svc-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: tomcat-svc-lb
spec:
  type: LoadBalancer
  selector:
    app: tomcat
  ports:
    - port: 80
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tomcat-deploy
  labels:
    app: tomcat
spec:
  replicas: 3
  selector:
    matchLabels:
      app: tomcat
  template:
    metadata:
      labels:
        app: tomcat
    spec:
      containers:
        - name: tomcat
          image: tomcat
          ports:
            - containerPort: 8080
