devops-k8s-master/yaml/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tomcat-http-spring-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - tomcat.jaesay.com
      - http-spring.jaesay.com
    secretName: ingress-tls
  rules:
    - host: tomcat.jaesay.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tomcat
                port:
                  number: 80
    - host: http-spring.jaesay.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: http-spring
                port:
                  number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: http-spring
spec:
  selector:
    app: http-spring
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: tomcat
spec:
  selector:
    app: tomcat
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-spring
  labels:
    app: http-spring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: http-spring
  template:
    metadata:
      labels:
        app: http-spring
    spec:
      containers:
        - name: http-spring
          image: jaesay/http-spring
          ports:
            - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tomcat
  labels:
    app: tomcat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tomcat
  template:
    metadata:
      labels:
        app: tomcat
    spec:
      containers:
        - name: tomcat
          image: consol/tomcat-7.0
          ports:
            - containerPort: 8080
